# RandomProjects

./: Age-gap list  DegreesCalculator.cpp
DiAnSpoints/: dians_points.py  sorted_output.txt  unsorted_input.txt
MatchingAlgorithms/: stable_marriage.py
MathematicalEngineering/: newton-raphson.py  newton-raphson_steps.py  regula_falsi.py
MathematicalEngineering/The Bisection Method/src/: Main.java
MathematicalEngineering/The Horner Method/src/: Main.java
Pendulum/: pendulum.cpp
Pendulum/pendulum/: README  README.md  platformio.ini
Pendulum/pendulum/src/: main.cpp
PyGame/2. Chapter/: blankpygame.py  drawing.py  fonttext.py
PyGame/2. Chapter/catAnimation/: catanimation.py
PythonBindings/: CMakeLists.txt  Main.cpp  ctypes_test.py  main.c
PythonBindings/ClassicPointers/: CMakeLists.txt  Pointer.c  Pointer.h
PythonBindings/CustomPointers/: CMakeLists.txt  CustomPointer.c  CustomPointer.h
PythonBindings/EventCounter/: CMakeLists.txt  EventCounter.cpp  EventCounter.hpp
QuickCalculationsInCpp/: DegreesCalculator.cpp
SkitPoints/: 1_sorted.txt  2_sorted.txt  filter_data.py  skit_points.py  skit_results_filtered.txt  skit_results_unfiltered.txt  sorted_students.txt
The Subsequent Iterations Method/src/: Main.java
WebBubbleAnimation/: index.html  style.css
WebDev/: stars-warp.tsx
WebDev/WebBubbleAnimation/: script.js
iterationsMathematicalEngineering1/src/: Main.java
